# hegel-rust

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONCURRENT.md  CONTRIBUTING.md  Cargo.toml  FINALIZED.md  IMPLEMENTATION.md  INSTRUCTIONS.md  README.md  RELEASE-sample.md  RELEASE.md  SKIPPED.md  TODO.md  TODO.yaml  build.rs  clippy.toml  flake.nix  hegel-racy-wrapper.py  justfile  race_fix_summary.md  shell.nix
.claude/: CLAUDE.md  settings.json
.claude/commands/: native-loop-cancel.md  native-loop.md  native-status.md  native-todo.md
.claude/hooks/: stop-hook.sh  timeout-bash.sh
.claude/scripts/: count-canaries.py  first-uncovered.py  list-unported.py  setup-native-loop.sh
.github/: coverage-ratchet.json
.github/scripts/: bump_hegel_core.py  release.py  test_release.py
.github/workflows/: bump-hegel-core.yml  check-release.yml  ci.yml  test-race-fix.yml  windows.yml
benches/: biased_sample.rs  engine.rs
docs/: getting-started.md
examples/: concurrent_kv_store.rs  ledger.rs  min_stack.rs  multi.rs  tutorial.rs
hegel-c/: CHANGELOG.md  Cargo.toml  MIGRATION-refcount.md  README.md  RELEASE.md  build.rs  cbindgen.toml
hegel-c/examples/: custom_output.c  echo.c  failing.c  hegel_check.h  invalid_argument.c  invalid_schema.c  pool.c  spans_collections.c  state_machine.c
hegel-c/include/: hegel.h
hegel-c/src/: antithesis_detect.rs  backend.rs  cbor_utils.rs  control.rs  embed.rs  exchange.rs  lib.rs  panic.rs  settings.rs
hegel-c/src/native/: base64.rs  bignum.rs  blob.rs  data_source.rs  data_tree.rs  database.rs  draws.rs  floats.rs  intervalsets.rs  mod.rs  printer.rs  rng.rs  statistics.rs  targeting.rs  test_runner.rs
hegel-c/src/native/core/: choices.rs  float_index.rs  mod.rs  state.rs  state_machine.rs
hegel-c/src/native/draws/: internet.rs  mod.rs  regex.rs  special.rs  text.rs
hegel-c/src/native/re/: constants.rs  parser.rs
hegel-c/src/native/schema/: bytes.rs  collections.rs  float.rs  internet.rs  mod.rs  numeric.rs  regex.rs  special.rs  text.rs
hegel-c/src/native/shrinker/: bytes.rs  clones.rs  coarse.rs  deletion.rs  floats.rs  index_passes.rs  integers.rs  mod.rs  mutation.rs  ordering.rs  scheduling.rs  search.rs  sequence.rs  spans.rs  strings.rs
hegel-c/src/unicodedata/: categories.txt  mod.rs  nfd_bases.txt
hegel-c/tests/: c_abi_generate.rs  c_abi_inprocess.rs  c_abi_miri.rs  c_abi_printer.rs  handles_miri.rs  smoke.rs
hegel-c/tests/common/: mod.rs
hegel-c/tests/embedded/: antithesis_detect_tests.rs  backend_tests.rs  cbor_utils_tests.rs  control_tests.rs  embed_tests.rs  exchange_tests.rs  lib_tests.rs  panic_tests.rs  settings_tests.rs
hegel-c/tests/embedded/native/: base64_tests.rs  bignum_tests.rs  blob_tests.rs  choices_tests.rs  data_source_tests.rs  data_tree_tests.rs  database_tests.rs  float_index_tests.rs  floats_tests.rs  intervalsets_tests.rs  printer_tests.rs  re_parser_tests.rs  rng_tests.rs  shrinker_bytes_tests.rs  shrinker_cache_tests.rs  shrinker_clones_tests.rs  shrinker_coarse_tests.rs  shrinker_defensive_branch_tests.rs  shrinker_floats_tests.rs  shrinker_forced_node_tests.rs  shrinker_integers_tests.rs  shrinker_lower_common_node_offset_tests.rs  shrinker_minimize_duplicated_choices_tests.rs  shrinker_minimize_individual_choices_tests.rs  shrinker_node_program_tests.rs  shrinker_ordering_tests.rs  shrinker_pass_to_descendant_tests.rs  shrinker_remove_discarded_tests.rs  shrinker_reorder_spans_tests.rs  shrinker_scheduling_tests.rs  shrinker_search_tests.rs  shrinker_sequence_tests.rs  shrinker_spans_tests.rs  shrinker_string_passes_tests.rs  shrinker_strings_tests.rs  shrinker_try_trivial_spans_tests.rs  state_clone_tests.rs  state_machine_tests.rs  state_tests.rs  statistics_oracle_data.rs  (+5 more)
hegel-c/tests/embedded/native/draws/: internet_tests.rs  mod_tests.rs  regex_tests.rs  special_tests.rs  text_tests.rs
hegel-c/tests/embedded/native/schema/: collections_tests.rs  float_tests.rs  internet_tests.rs  mod_tests.rs  numeric_tests.rs  regex_tests.rs  special_tests.rs  text_tests.rs
hegel-derive/: Cargo.toml
hegel-derive/src/: enum_gen.rs  hegel_test.rs  lib.rs  struct_gen.rs  utils.rs
hegel-macros/: Cargo.toml  README.md
hegel-macros/src/: common.rs  composite.rs  enum_gen.rs  explicit_test_case.rs  hegel_main.rs  hegel_test.rs  lib.rs  not_supported_on_native.rs  pretty_printable.rs  reproduce_failure.rs  rewrite_draws.rs  standalone_function.rs  stateful.rs  struct_gen.rs  utils.rs
hegel-macros/tests/embedded/: common_tests.rs
nix/: flake.nix
scripts/: c-examples-run.sh  check-coverage.py  check-generator-imports.py  check-internal-asserts.py  check-nocov-style.py  check-test-modules.py  generate_statistics_oracle.py  generate_unicodedata_python_reference.py  generate_unicodedata_tables.py  hegelsmith-runner-setup.sh  hegelsmith-runner.sh  install-hegel.sh  port-loop.py  setup-machine.sh
src/: antithesis.rs  backend.rs  cbor_helpers.rs  cbor_utils.rs  cli.rs  control.rs  embed.rs  embedded.rs  explicit_test_case.rs  ffi.rs  lib.rs  pretty.rs  protocol.rs  run_lifecycle.rs  runner.rs  runner_tests.rs  settings.rs  stateful.rs  test_case.rs  utils.rs  uv.rs
src/cbor_utils/: num.rs  (+1 more)
tests/: .test_loop.rs.pending-snap  floats.rs  integers.rs  integers_bounds.rs  test_antithesis.rs  test_arrays.rs  test_async.rs  test_backend.rs  test_bad_server_command.rs  test_collections.rs  test_combinators.rs  test_compile.rs  test_compose.rs  test_composite.rs  test_concurrent_stateful.rs  test_database_key.rs  test_default.rs  test_deferred.rs  test_derive.rs  test_derive_compile.rs  test_derive_generator.rs  test_derive_pretty_printable.rs  test_draw_named.rs  test_error_handling.rs  test_explain.rs  test_explicit_test_case.rs  test_failure_payload.rs  test_flaky_global_state.rs  test_flaky_replay.rs  test_floats.rs  test_from_type.rs  test_hang.rs  test_health_check.rs  test_hegel_main.rs  test_hegel_test.rs  test_install_errors.rs  test_integers.rs  test_internal_errors.rs  test_lifetimes.rs  test_loop.rs  (+35 more)
tests/conformance/rust/: Cargo.toml
tests/conformance/rust/src/: lib.rs
(+491 files in other folders)
