[package]
name = "hegeltest"
version = "0.1.0"
edition = "2021"
# if you bump this, also bump ci.yml and hegel-macros/Cargo.toml
rust-version = "1.86"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hegeldev/hegel-rust"
homepage = "http://hegel.dev"
description = "Property-based testing for Rust, built on Hypothesis"
keywords = ["testing", "fuzzing", "property-based-testing"]
categories = ["development-tools::testing"]

[lib]
name = "hegel"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
num = "0.4"
paste = "1.0"
hegeltest-macros = { version = "=0.1.0", path = "hegel-macros" }
tempfile = "3.0"
rand = { version = "0.9", optional = true }
# Binary protocol support
ciborium = "0.2"
crc32fast = "1.4"

[dev-dependencies]
regex = "1.0"
rand = "0.9"

[features]
default = []
rand = ["dep:rand"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
