[workspace]
members = [".", "hegel-macros"]

[package]
name = "hegeltest"
version = "0.12.3"
edition = "2024"
# if you bump this, also bump ci.yml and hegel-macros/Cargo.toml
rust-version = "1.86"
exclude = [
  "/.claude",
  "/.github",
  "/nix",
  "/RELEASE-sample.md",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hegeldev/hegel-rust"
homepage = "http://hegel.dev"
description = "Property-based testing for Rust, built on Hypothesis"
# Ideally we would replace property-testing with property-based-testing,
# but crates.io enforces that keywords be less than 20 characters.
keywords = ["testing", "fuzzing", "property-testing"]
categories = ["development-tools::testing"]

[lib]
name = "hegel"

# By default, rustdoc does not build examples even with -Zrustdoc-scrape-examples,
# because doing so would pull in dev-dependencies. Enabling doc-scrape-examples
# for one example is enough to lift this restriction. See
# https://doc.rust-lang.org/cargo/reference/unstable.html#scrape-examples
[[example]]
name = "stack"
doc-scrape-examples = true

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
paste = "1.0"
tempfile = "3.0"
ciborium = "0.2.2"
crc32fast = "1.4"
parking_lot = "0.12"
hegeltest-macros = { version = "=0.12.3", path = "hegel-macros" }
# optional feature dependencies
rand = { version = "0.10", optional = true }
serde_json = { version = "1.0.61", optional = true }
# opting out of the clock, now, and wasmbind features.
# 0.4.41 is the minimum version that has WeekdaySet.
chrono = { version = "0.4.41", default-features = false, features = ["std"], optional = true }
# opting out of bundled tz features
jiff = { version = "0.2", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
regex = "1.0"
rand = "0.10"
serde_json = "1.0.61"
insta = "1.47.2"
ctor = "0.2"

[features]
default = []
rand = ["dep:rand"]
antithesis = ["dep:serde_json"]
chrono = ["dep:chrono"]
jiff = ["dep:jiff"]
serde_json = ["dep:serde_json"]
# Enables the serde_json/raw_value feature. Enables generators for serde_json::value::RawValue.
serde_json_raw_value = ["serde_json", "serde_json/raw_value"]

[package.metadata.docs.rs]
all-features = true
# -D warnings means "deny warnings", which actually means "turn warnings into errors". Have
# we mentioned naming things is hard?
rustdoc-args = ["--cfg", "docsrs", "-D", "warnings"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
