[workspace]
members = [".", "hegel-macros", "hegel-c"]

[package]
name = "hegeltest"
version = "0.20.1"
edition = "2024"
# if you bump this, also bump ci.yml and hegel-macros/Cargo.toml
rust-version = "1.86"
exclude = [
  "/.claude",
  "/.github",
  "/nix",
  "/RELEASE-sample.md",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hegeldev/hegel-rust"
homepage = "http://hegel.dev"
description = "Property-based testing for Rust, built on Hypothesis"
# Ideally we would replace property-testing with property-based-testing,
# but crates.io enforces that keywords be less than 20 characters.
keywords = ["testing", "fuzzing", "property-testing"]
categories = ["development-tools::testing"]

[lib]
name = "hegel"

# By default, rustdoc does not build examples even with -Zrustdoc-scrape-examples,
# because doing so would pull in dev-dependencies. Enabling doc-scrape-examples
# for one example is enough to lift this restriction. See
# https://doc.rust-lang.org/cargo/reference/unstable.html#scrape-examples
[[example]]
name = "stack"
doc-scrape-examples = true

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
paste = "1.0"
tempfile = "3.0"
ciborium = "0.2.2"
crc32fast = "1.4"
parking_lot = "0.12"
hegeltest-macros = { version = "=0.20.1", path = "hegel-macros" }
# The native engine + C ABI ("libhegel"). hegeltest drives it through the
# C ABI (the hegel_* extern "C" functions), exactly like other language
# bindings. Its lib is named `hegel_c` (imported as `hegel_c`); the package
# is `hegeltest-c`.
hegeltest-c = { version = "=0.20.1", path = "hegel-c", default-features = false }
rand = { version = "0.10" }
dashu-int = { version = "0.4.1", default-features = false, features = ["std"] }
miniz_oxide = { version = "0.8" }
# Fast, non-DoS-resistant hasher for the native engine's internal maps
# (data tree + span-mutation bookkeeping; keys are our own choice values /
# span labels, never adversarial). Replaces the default SipHash, which
# profiling showed prominently on the generation hot path.
rustc-hash = { version = "2" }
# optional feature dependencies
serde_json = { version = "1.0.61", optional = true }
# opting out of the clock, now, and wasmbind features.
# 0.4.41 is the minimum version that has WeekdaySet.
chrono = { version = "0.4.41", default-features = false, features = ["std"], optional = true }
# opting out of bundled tz features
jiff = { version = "0.2", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
regex = "1.0"
rand = "0.10"
serde_json = "1.0.61"
insta = "1.47.2"
ctor = "0.2"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# Not used directly: this is a `-Z minimal-versions` floor. criterion pulls in
# `is-terminal`, and its pre-0.4.13 releases depend on a `rustix 0.37.0` that no
# longer compiles on current nightly. 0.4.13 dropped the rustix dependency.
is-terminal = "0.4.13"
# Note: tokio 1.39 is when tokio started having the required compatibility
# with other macros for #[hegel::test] to work with #[tokio::test]. See
# https://github.com/tokio-rs/tokio/pull/6497
tokio = { version = "1.39", features = ["macros", "rt"] }

[[bench]]
name = "biased_sample"
harness = false
required-features = ["__bench"]

[features]
default = []
# Gates `extras::rand::randoms()`, which generates `rand::RngCore` impls. The
# `rand` crate itself is always a dependency (the native engine uses it), so
# this feature only toggles the extra public generator surface.
rand = []
antithesis = ["dep:serde_json"]
chrono = ["dep:chrono"]
jiff = ["dep:jiff"]
serde_json = ["dep:serde_json"]
# Enables the serde_json/raw_value feature. Enables generators for serde_json::value::RawValue.
serde_json_raw_value = ["serde_json", "serde_json/raw_value"]
# Internal: re-exports engine internals needed by `benches/` (from hegel-c,
# where the engine lives). Not part of the public API; depend on at your peril.
__bench = ["hegeltest-c/__bench"]

# Tune the dev/test profile for CI speed.
#
# `opt-level = 1`: the native engine is compute-heavy, and running it
# unoptimized makes the property-test suites dominate CI wall-clock — far
# worse on Windows. opt-level 1 recovers most of the speed at modest compile
# cost. Kept as a *whole-profile* setting (not per-package) specifically so
# the coverage build can override it back to 0 via `CARGO_PROFILE_DEV_OPT_LEVEL`:
# `cargo llvm-cov` needs unoptimized code for accurate line attribution
# (optimization inlines small functions and drops their coverage regions).
# See the `check-coverage` recipe in the justfile.
#
# `debug = "line-tables-only"`: the default dev profile emits full DWARF/PDB
# debuginfo, which dominates link time — especially on Windows, where
# `link.exe` is slow and the fat `.pdb` is the bottleneck. line-tables-only
# keeps file/line info for panic backtraces (which tests rely on) while
# dropping the heavy variable/type debuginfo.
#
# Both settings affect only the *main* build. Integration tests that spawn
# `cargo` subprocesses build standalone temp crates with their own profile;
# those are tuned separately via the `CARGO_PROFILE_*` env vars in
# `tests/common/project.rs`.
[profile.dev]
opt-level = 1
debug = "line-tables-only"

[package.metadata.docs.rs]
all-features = true
# -D warnings means "deny warnings", which actually means "turn warnings into errors". Have
# we mentioned naming things is hard?
rustdoc-args = ["--cfg", "docsrs", "-D", "warnings"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
