[package]
name = "hegeltest-c"
version = "0.14.18"
edition = "2024"
rust-version = "1.86"
license = "MIT"
description = "C shared library bindings for Hegel's native engine."
repository = "https://github.com/hegeldev/hegel-rust"
homepage = "http://hegel.dev"
readme = "README.md"

[lib]
name = "hegel"
crate-type = ["cdylib", "staticlib"]

[dependencies]
hegeltest = { version = "=0.14.18", path = "..", default-features = false }
ciborium = "0.2.2"

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
libloading = "0.8"
tempfile = "3"
