[package]
name = "hegeltest-macros"
version = "0.12.7"
edition = "2024"
rust-version = "1.86"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hegeldev/hegel-rust"
homepage = "http://hegel.dev"
description = "Procedural macros for Hegel."

[lib]
name = "hegel_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut"] }

[features]
default = []
# Build-time switch that enables internal-only macros used by hegel-rust's
# own test suite (currently just `#[not_supported_on_native]`). Enabled by
# the dev-dependency on hegeltest-macros in the workspace root, never by
# the regular dependency, so external users of hegel never see these
# macros in their hegeltest-macros surface.
internal-test-only = []
