# Don't include this as part of our top-level workspace.
# Our conformance tests are run separately and it's worth keeping them
# isolated for eg version pinning. It's a bit unfortunate we lose `cargo fmt`
# working over this automatically, but we can just adjust CI to include it.
[workspace]

[package]
name = "hegel-conformance"
version = "0.1.0"
edition = "2024"

[dependencies]
hegeltest = { path = "../../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }

[[bin]]
name = "test_booleans"
path = "src/bin/test_booleans.rs"

[[bin]]
name = "test_integers"
path = "src/bin/test_integers.rs"

[[bin]]
name = "test_floats"
path = "src/bin/test_floats.rs"

[[bin]]
name = "test_text"
path = "src/bin/test_text.rs"

[[bin]]
name = "test_binary"
path = "src/bin/test_binary.rs"

[[bin]]
name = "test_lists"
path = "src/bin/test_lists.rs"

[[bin]]
name = "test_sampled_from"
path = "src/bin/test_sampled_from.rs"

[[bin]]
name = "test_hashmaps"
path = "src/bin/test_hashmaps.rs"
